<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_itemCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="@dimen/cardElevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/profile_alter_dialog_margin">

            <TextView
                android:id="@+id/delete_messageTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/Red"
                android:textColorHint="@color/Grey"
                android:hint="@string/delete_messageTV_Hint"
                android:textSize="@dimen/delete_profile_message_text_size"
                ></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_profile_alter_dialog_button_cancelBT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Blue"
                    android:text="@string/alter_dialog_button_cancelBT_Text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/profile_alter_dialog_message_text_size"></Button>

                <Button
                    android:id="@+id/delete_profile_enter_alter_dialog_button_deleteBT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Red"
                    android:text="@string/delete_profile_enter_alter_dialog_button_deleteBT_Text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/profile_alter_dialog_message_text_size"></Button>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>