<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my_dashboard_title_text"
                android:textColor="@color/Blue"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/homeCV"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_height"
                    android:layout_margin="@dimen/dashboard_element_margin"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/Blue"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dashboard_image_size"
                            android:layout_height="@dimen/dashboard_image_size"
                            android:src="@drawable/home_icon"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_text"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"></TextView>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/chatCV"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_height"
                    android:layout_margin="@dimen/dashboard_element_margin"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/Blue"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dashboard_image_size"
                            android:layout_height="@dimen/dashboard_image_size"
                            android:src="@drawable/chat_icon"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chat_text"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"></TextView>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profileCV"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_height"
                    android:layout_margin="@dimen/dashboard_element_margin"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/Blue"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dashboard_image_size"
                            android:layout_height="@dimen/dashboard_image_size"
                            android:src="@drawable/profile_icon"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_text"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"></TextView>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/widgetsCV"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_height"
                    android:layout_margin="@dimen/dashboard_element_margin"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/Blue"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dashboard_image_size"
                            android:layout_height="@dimen/dashboard_image_size"
                            android:src="@drawable/widgets_icon"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/widgets_text"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"></TextView>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/settingsCV"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_height"
                    android:layout_margin="@dimen/dashboard_element_margin"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/Blue"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dashboard_image_size"
                            android:layout_height="@dimen/dashboard_image_size"
                            android:src="@drawable/settings_icon"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_text"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"></TextView>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/logoutCV"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_height"
                    android:layout_margin="@dimen/dashboard_element_margin"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/Blue"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dashboard_image_size"
                            android:layout_height="@dimen/dashboard_image_size"
                            android:src="@drawable/logout_icon"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/logout_text"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"></TextView>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>